# flutter-app

./: .gitignore  .gitmodules  CODEOWNERS  README.md  analysis_options.yaml  ffigen_golang.yaml  flutter_rust_bridge.yaml  l10n.yaml  lefthook.yml  proton_crypto.h  pubspec.yaml  sonar-project.properties
rust/: Cargo.toml  build.rs  cargokit.yaml  tarpaulin.toml
rust/proton-wallet-common.xcodeproj/: project.pbxproj
rust/proton-wallet-common.xcodeproj/project.xcworkspace/xcuserdata/Yanfeng.xcuserdatad/: UserInterfaceState.xcuserstate
rust/proton-wallet-common.xcodeproj/xcuserdata/Yanfeng.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api2.rs  blockchain.rs  bridge_generated.io.rs  bridge_generated.rs  descriptor.rs  error.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  key.rs  lib.rs  rust_api.rs  types.rs  wallet.rs
rust/src/api/: api2.rs  bdk_account.rs  bdk_mnemonic.rs  bdk_wallet.rs  errors.rs  flutter_logger.rs  ldk_api.rs  logger.rs  mod.rs  panic_hook.rs  proton_api.rs  proton_api_service.rs  rust_api.rs  rust_objects.rs
rust/src/api/api_service/: address_client.rs  bitcoin_address_client.rs  block_client.rs  discovery_content_client.rs  email_integration_client.rs  event_client.rs  exchange_rate_client.rs  invite_client.rs  mod.rs  onramp_gateway_client.rs  price_graph_client.rs  proton_api_service.rs  proton_contacts_client.rs  proton_email_addr_client.rs  proton_settings_client.rs  proton_users_client.rs  settings_client.rs  transaction_client.rs  unleash_client.rs  wallet_auth_store.rs  wallet_client.rs
rust/src/api/api_service/tests/: mod.rs  parallel_request.rs
rust/src/api/bdk_wallet/: account.rs  account_statement_generator.rs  account_sweeper.rs  account_syncer.rs  address.rs  amount.rs  balance.rs  blockchain.rs  derivation_path.rs  discovered_account.rs  local_output.rs  message_signer.rs  mnemonic.rs  mod.rs  payment_link.rs  psbt.rs  script_buf.rs  sequence.rs  storage.rs  transaction_builder.rs  transaction_details.rs  transaction_details_txin.rs  transaction_details_txop.rs  transactions.rs  wallet.rs
rust/src/api/crypto/: mod.rs  srp.rs  wallet_key.rs  wallet_key_helper.rs  wallet_key_provider.rs
rust/src/api/db/: app_database_helper.rs
rust/src/api/proton_wallet/: mod.rs  wallet.rs
rust/src/api/proton_wallet/crypto/: mod.rs  wallet_key.rs  wallet_key_helper.rs
rust/src/api/proton_wallet/db/: app_database_helper.rs  mod.rs
rust/src/api/proton_wallet/features/: backup_mnemonic.rs  mod.rs  proton_recovery.rs  transition_layer.rs  wallet_creation.rs
rust/src/api/proton_wallet/srp/: mod.rs  srp_client.rs
rust/src/api/proton_wallet/storage/: mod.rs  user_key_store.rs  wallet_key_store.rs  wallet_mnemonic_store.rs
rust/src/api/srp/: srp_client.rs
rust/src/bdk/: blockchain.rs  descriptor.rs  error.rs  key.rs  mod.rs  psbt.rs  types.rs  wallet.rs
rust/src/bdk_common/: account.rs  balance.rs  bdk_account.rs  error.rs  mod.rs  network.rs  types.rs  wallet.rs  word_count.rs
rust/src/common/: address_info.rs  blockchain.rs  broadcast_message.rs  change_spend_policy.rs  coin_selection.rs  confirmation_time.rs  errors.rs  esplora_config.rs  keychain_kind.rs  logger.rs  mnemonic.rs  mod.rs  network.rs  pagination.rs  script_type.rs  signing_type.rs  transaction_time.rs  word_count.rs
rust/src/ldk/: lightning.rs  mod.rs
rust/src/mocks/: auth.rs  constant.rs  mod.rs  proton_user.rs  user_keys.rs
rust/src/proton_account/features/: error.rs  mod.rs
rust/src/proton_account/features/recovery/: proton_recovery.rs
rust/src/proton_api/: address_routes.rs  api_service.rs  auth_credential.rs  auth_routes.rs  auth_store.rs  block_routes.rs  contacts.rs  discovery_content.rs  errors.rs  event_routes.rs  exchange_rate.rs  invite.rs  mod.rs  network_routes.rs  payment_gateway.rs  price_graph.rs  proton_address.rs  proton_users.rs  quark_command.rs  route.rs  transaction.rs  transactions_routes.rs  types.rs  unleash.rs  user_settings.rs  user_settings_routes.rs  wallet.rs  wallet_account.rs  wallet_account_routes.rs  wallet_auth_store.rs  wallet_routes.rs  wallet_settings.rs  wallet_settings_routes.rs  wallet_transaction_routes.rs
rust/src/proton_bdk/: storage.rs
rust/src/proton_wallet/: mod.rs  wallet.rs
rust/src/proton_wallet/common/: callbacks.rs
rust/src/proton_wallet/crypto/: binary.rs  errors.rs  label.rs  message.rs  mnemonic.rs  mnemonic_lagcy.rs  mnemonic_legacy.rs  mod.rs  private_key.rs  public_key.rs  srp.rs  transaction_id.rs  transaction_label.rs  user_key.rs  wallet_account_label.rs  wallet_bitcoin_address.rs  wallet_key.rs  wallet_key_provider.rs  wallet_message.rs  wallet_name.rs
rust/src/proton_wallet/db/: account.rs  app_database.rs  database.rs  error.rs  migration.rs  migration_container.rs  mod.rs
rust/src/proton_wallet/db/dao/: account_dao.rs  address_dao.rs  bitcoin_address_dao.rs  contacts_dao.rs  dao.rs  exchange_rate_dao.rs  mod.rs  proton_user_dao.rs  proton_user_key_dao.rs  ramp_countries_dao.rs  transaction_dao.rs  wallet_dao.rs  wallet_user_settings_dao.rs
rust/src/proton_wallet/db/database/: account.rs  address.rs  bitcoin_address.rs  contacts.rs  database.rs  error.rs  exchange_rate.rs  migration.rs  migration_container.rs  mod.rs  proton_user.rs  proton_user_key.rs  table_names.rs  transaction.rs  wallet.rs  wallet_user_settings.rs
rust/src/proton_wallet/db/model/: account_model.rs  (+14 more)
rust/src/proton_wallet/features/: backup_mnemonic.rs  error.rs  mod.rs  proton_recovery.rs
rust/src/proton_wallet/provider/: account.rs  address.rs  bitcoin_address.rs  contacts.rs  error.rs  exchange_rate.rs  mod.rs  proton_auth.rs  proton_auth_model.rs  proton_user.rs  proton_user_key.rs  proton_user_settings.rs  provider.rs  transaction.rs  user_keys.rs  wallet.rs  wallet_keys.rs  wallet_mnemonic.rs  wallet_name.rs  wallet_user_settings.rs
rust/src/proton_wallet/storage/: address_key_ext.rs  error.rs  mod.rs  user_key.rs  user_key_ext.rs  wallet_key.rs  wallet_mnemonic.rs  wallet_mnemonic_ext.rs
rust/src/srp/: proofs.rs
rust/src/utilities/: mod.rs  serde_case_insensitive.rs
(+1229 files in other folders)
