[package]
name = "proton_wallet_common"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_matches = "1.5"
env_logger = "0.11.0"
mockall = "0.12.1"
hyper = "1.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
flutter_rust_bridge_codegen = { version = "2.1.0" }

[dependencies]
##
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
#https://crates.io/crates/secrecy
secrecy = "0.8.0"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "modern_sqlite",
    "uuid",
    "chrono",
    "functions",
    "trace",
] }
serde_rusqlite = "0.35.0"
async-trait = { version = "0.1.66" }

## old
thiserror = "1.0.61"
rand = "0.8"
base64 = "0.22.0"
tokio = { version = "1.28.0", features = ["full"] }
flutter_rust_bridge = "=2.1.0"
serde = "1.0.89"
serde_json = "1.0.96"
lazy_static = "1.4.0"
chrono = "0.4.38"
## flutter rust logger
flutter_logger = { version = "0.6.1", features = ["panic"] }
log = "0.4.19"
### proton dependencies
andromeda-api = { path = "../vendor/andromeda/crates/api" }
andromeda-bitcoin = { path = "../vendor/andromeda/crates/bitcoin", features = [
    "sqlite",
] }
andromeda-common = { path = "../vendor/andromeda/crates/common" }
proton-srp = { version = "0.4.1", default-features = false, registry = "proton" }

# bdk_sqlite = { version = "=0.2.0" }
proton-crypto = { path = "../vendor/proton-crypto-rs/proton-crypto" }
proton-crypto-account = { path = "../vendor/proton-crypto-rs/proton-crypto-account" }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
openssl = { version = "*", features = ["vendored"] }
# Platform-specific dependencies
# serde-wasm-bindgen = { version = "0.6.1", optional = true }
# wasm-bindgen = { version = "0.2.88", features=["serde-serialize"], optional = true  }

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.ios]
# Required
build_targets = ["aarch64-apple-ios"]

# [patch.crates-io]

[features]
default = []
mocking = []
test = ["andromeda-api/allow-dangerous-env", "mocking"]
