[package]
name = "proton_wallet_common"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
futures = "0.3.31"
assert_matches = "1.5.0"
mockall = "0.13.0"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "2.6.0" }

[dependencies]
##
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
#https://crates.io/crates/secrecy
secrecy = "0.10.0"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "modern_sqlite",
    "uuid",
    "chrono",
    "functions",
    "trace",
] }
serde_rusqlite = "0.35.0"
async-trait = { version = "0.1.88" }

tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

## 
flutter_rust_bridge = { version = "=2.6.0" } 

##
rand = "0.8.5" #could be removed with small change. when remove ask crypto team to review
thiserror = "2.0.12" ## auto error mapping
base64 = "0.22.1" ## base64 encoding
tokio = { version = "1.44.1", features = ["full"] }
lazy_static = "1.4.0"
hmac = "0.12"
sha2 = "0.10"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.40"

### proton dependencies
andromeda-api = { path = "../vendor/andromeda/crates/api" }
andromeda-bitcoin = { path = "../vendor/andromeda/crates/bitcoin", features = [
    "sqlite",
] }
andromeda-common = { path = "../vendor/andromeda/crates/common" }
proton-srp = { version = "0.5.1", default-features = false, registry = "proton" }

proton-crypto = { registry = "proton", version = "0.4.12" }
proton-crypto-account = { registry = "proton", version = "0.8.2" }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
# Platform-specific dependencies
# serde-wasm-bindgen = { version = "0.6.1", optional = true }
# wasm-bindgen = { version = "0.2.88", features=["serde-serialize"], optional = true  }

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
features = []

[package.metadata.ios]
# Required
build_targets = ["aarch64-apple-ios"]

# [patch.crates-io]

[features]
default = []
mocking = ["andromeda-api/mocking"]
test = ["andromeda-api/allow-dangerous-env", "mocking"]

[profile.dev]
features = ["andromeda-api/allow-dangerous-env"]
